# Faiz

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.org
doc/: integer_sequence.org
include/rider/faiz/: adl_get.hpp  algebra.hpp  algorithm.hpp  allocator.hpp  associated_types.hpp  bit.hpp  call_traits.hpp  char_traits.hpp  checked_deleter.hpp  common_type.hpp  compare_functor.hpp  compressed_pair.hpp  compressed_pair_test.cpp  cstddef.hpp  cstdio.hpp  cstring.hpp  cuchar.hpp  cwchar.hpp  debug.hpp  exception.hpp  faiz.hpp  faiz_fwd.hpp  faiz_fwd_meta.hpp  functional.hpp  initializer_list.hpp  integer_sequence.hpp  ios.hpp  iterator.hpp  logic.hpp  macros.hpp  memory.hpp  move.hpp  new.hpp  not_null.hpp  observer_ptr.hpp  operators.hpp  optional.hpp  ptr_traits.hpp  range.hpp  range_traits.hpp  (+13 more)
include/rider/faiz/container/: array.hpp  enumerator.hpp  vector.hpp
include/rider/faiz/math/: RelationAlgebra.hpp
include/rider/faiz/math/NumberSystem/: binary.hpp  literals.hpp
include/rider/faiz/utility/: box.hpp  concepts.hpp  functional.hpp  invoke.hpp  static_const.hpp  swap.hpp  tagged_pair.hpp
test/: CMakeLists.txt  call_traits.boost.cpp  cmp_nullptr.pass.cpp  integer_sequence.cpp  integer_sequence.libcxx.pass.cpp  integer_sequence.with.tuple.libcxx.cpp  integral_constant.libcxx.cpp  nullptr.libcxx.cpp  test_macros.h  testsuite_hooks.h  testsuite_tr1.h  unique_ptr.cpp
test/Math/NumberSystem/: Binary.cpp  CMakeLists.txt  main.cpp
test/algorithm/: CMakeLists.txt  compare.cpp
test/containers/array/: CMakeLists.txt  at.cpp  compare.cpp  cppreference-operator[].cpp  index.cpp  proxy.cpp
test/containers/list/: toy.cpp
test/functional/: CMakeLists.txt  compare.cpp
test/functional/reference_wrapper/: copyable.libstdcxx.cpp
test/operators/: CMakeLists.txt  test_gcc.cpp  test_operators.cpp
test/tight_pair/: CMakeLists.txt  build.sh  cppreference.cpp  dr-811.cpp  main.cpp  piecewise_no_copy_move.cpp  reference_wrapper.cpp
test/tight_pair/libcxx/: assign_const_pair_U_V.cpp  assign_rv_pair_U_V.cpp  const_first_const_second.cpp  copy_ctor.cpp  default.cpp  dtor.cpp  get_const.cpp  get_const_rv.cpp  get_non_const.cpp  get_rv.cpp  non_member_swap.cpp  pairs_by_type.cpp  piecewise_construct.cpp  rv_pair_U_V.cpp  test_convertible.h  tuple_size.cpp  used_to_be_make_pair.cpp
test/tight_pair/tests/: CMakeLists.txt  cppreference.cpp  dr-811.cpp  empty_base_get.cpp  piecewise_no_copy_move.cpp  reference_wrapper.cpp  test_empty.cpp  tricky_comparisons.cpp
test/tight_pair/tests/libcxx/: U_V.cpp  archetypes.h  assign_const_pair_U_V.cpp  assign_pair.cpp  assign_rv_pair.cpp  assign_rv_pair_U_V.cpp  assign_tuple.cpp  comparison.cpp  const_first_const_second.cpp  const_pair_U_V.cpp  copy_ctor.cpp  default-sfinae.cpp  default.cpp  default_ctor.cpp  dtor.cpp  get_const.cpp  get_const_rv.cpp  get_non_const.cpp  get_rv.cpp  implicit_deduction_guides.cpp  move_ctor.cpp  non_member_swap.cpp  pairs_by_type.cpp  piecewise_construct.cpp  rv_pair_U_V.cpp  special_member_generation.cpp  swap.cpp  trivial_copy_move.cpp  tuple_element.cpp  tuple_size.cpp  types.cpp  used_to_be_make_pair.cpp
test/type_traits/: CMakeLists.txt  add_const.libcxx.cpp  add_cv.libcxx.cpp  add_lvalue_reference.libcxx.cpp  add_lvalue_reference.libstdcxx.cpp  add_pointer.libcxx.cpp  add_rvalue_reference.libstdcxx.cpp  add_rvalue_refs.libcxx.cpp  are_nothrow_constructible.cpp  are_same.cpp  common_type.libcxx.cpp  common_type.range.cpp  conditional.libcxx.cpp  conjunction.libcxx.cpp  decay.libcxx.cpp  disjunction.libcxx.cpp  extent.libcxx.cpp  is_arithmetic.libcxx.cpp  is_arithmetic.libstdcxx.cpp  is_array.cpp  is_array.libcxx.cpp  is_assignable.libcxx.cpp  is_assignable.libstdcxx.cpp  is_base_of.libcxx.cpp  is_class.libcxx.cpp  is_class.libstdcxx.cpp  is_constructible.libcxx.cpp  is_convertible.libcxx.cpp  is_convertible.libstdcxx.cpp  is_copy_assignable.cpp  is_copy_assignable.libstdcxx.cpp  is_destructible.1.cpp  is_destructible.cpp  is_empty.libcxx.cpp  is_floating_point.libcxx.cpp  is_floating_point.libstdcxx.cpp  is_function.libcxx.cpp  is_integral.libcxx.cpp  is_integral.libstdcxx.cpp  is_member_function_pointer.libstdcxx.cpp  (+47 more)
test/unique_ptr/: 54351.cc  CMakeLists.txt  dr2228.cc  size.cpp
test/unique_ptr/assign/: 48635.cc  48635_neg.cc  assign_neg.cc  cv_qual.cc  move.cc  move_array.cc  nullptr.cc
test/unique_ptr/comparison/: 42925.cc  broken  dr1401.cc
test/unique_ptr/cons/: 77990.cc  array_convertible_neg.cc  auto_ptr.cc  auto_ptr_neg.cc  constexpr.cc  convertible_neg.cc  cv_qual.cc  cv_qual_neg.cc  deduction_neg.cc  default.cc  incomplete.cc  lwg2905.cc  noexcept_move_construct.cc  nullptr.cc  pointer.cc  pointer_array.cc  pointer_array_convertible_neg.cc  ptr_deleter.cc  ptr_deleter_neg.cc
test/unique_ptr/creation/: array.cc  array_neg.cc  single.cc
test/unique_ptr/hash/: 1.cc
test/unique_ptr/modifiers/: 43183.cc  48398.cc  cv_qual.cc  reset_neg.cc
test/unique_ptr/requirements/: ha  incomplete.cc  pointer_type.cc  pointer_type_array.cc
test/unique_ptr/requirements/explicit_instantiation/: explicit_instantiation.cc  ha
test/unique_ptr/specialized_algorithms/: comparisons.cc  comparisons_array.cc  swap.cc  swap_cxx17.cc
test/utility/: call_traits.cpp
